create register_outbound function

--- a/locales/en/LC_MESSAGES/base.po
+++ b/locales/en/LC_MESSAGES/base.po
@@ -127,3 +127,6 @@ msgstr "does not exist"
 
 msgid "pallets_swapped_successfully"
 msgstr "Pallets swapped successfully"
+
+msgid "missing_articles"
+msgstr "Missing articles"
