--- a/locales/es/LC_MESSAGES/base.po
+++ b/locales/es/LC_MESSAGES/base.po
@@ -127,3 +127,6 @@ msgstr "no existe"
 
 msgid "pallets_swapped_successfully"
 msgstr "Pallets intercambiados correctamente"
+
+msgid "missing_articles"
+msgstr "Artículos faltantes"
