create RegisterOutbound frame

--- a/locales/en/LC_MESSAGES/base.po
+++ b/locales/en/LC_MESSAGES/base.po
@@ -130,3 +130,9 @@ msgstr "Pallets swapped successfully"
 
 msgid "missing_articles"
 msgstr "Missing articles"
+
+msgid "register_outbound"
+msgstr "Register outbound"
+
+msgid "outbound_registered_successfully"
+msgstr "Outbound registered successfully"
